Assignment complete - removed one parameter

--- a/module4-topic-modeling/LS_DS_414_Topic_Modeling_Assignment.ipynb
+++ b/module4-topic-modeling/LS_DS_414_Topic_Modeling_Assignment.ipynb
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +597,7 @@
        "amazonbasics                        0.062653                    0.094803  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +610,7 @@
     "overall_model = pd.DataFrame.from_records(new_distro, index=brands)\n",
     "overall_model.columns = topics\n",
     "\n",
-    "overall_model['brand'] = overall_model.reset_index()['index'].apply(lambda x: x.split('_')[0]).tolist()\n",
+    "overall_model['brand'] = overall_model.reset_index()['index'].tolist()\n",
     "\n",
     "overall_model.groupby('brand').mean()"
    ]
