--- a/module4-topic-modeling/LS_DS_414_Topic_Modeling_Assignment.ipynb
+++ b/module4-topic-modeling/LS_DS_414_Topic_Modeling_Assignment.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -227,43 +227,43 @@
      "text": [
       "===========================================\n",
       "Model Index: 0 - 2 Topics\n",
-      "Coherence Value -2.5486647352826055\n",
+      "Coherence Value: -2.5486647352826055\n",
       "===========================================\n",
       "Model Index: 1 - 5 Topics\n",
-      "Coherence Value -2.889016407640736\n",
+      "Coherence Value: -2.889016407640736\n",
       "===========================================\n",
       "Model Index: 2 - 8 Topics\n",
-      "Coherence Value -3.6515834385869352\n",
+      "Coherence Value: -3.6515834385869352\n",
       "===========================================\n",
       "Model Index: 3 - 11 Topics\n",
-      "Coherence Value -4.028169001388343\n",
+      "Coherence Value: -4.028169001388343\n",
       "===========================================\n",
       "Model Index: 4 - 14 Topics\n",
-      "Coherence Value -3.8815559967653663\n",
+      "Coherence Value: -3.8815559967653663\n",
       "===========================================\n",
       "Model Index: 5 - 17 Topics\n",
-      "Coherence Value -4.489362790297851\n",
+      "Coherence Value: -4.489362790297851\n",
       "===========================================\n",
       "Model Index: 6 - 20 Topics\n",
-      "Coherence Value -4.532975157684829\n",
+      "Coherence Value: -4.532975157684829\n",
       "===========================================\n",
       "Model Index: 7 - 23 Topics\n",
-      "Coherence Value -4.50427222694171\n",
+      "Coherence Value: -4.50427222694171\n",
       "===========================================\n",
       "Model Index: 8 - 26 Topics\n",
-      "Coherence Value -4.651477215909006\n",
+      "Coherence Value: -4.651477215909006\n",
       "===========================================\n",
       "Model Index: 9 - 29 Topics\n",
-      "Coherence Value -4.758765876556246\n",
+      "Coherence Value: -4.758765876556246\n",
       "===========================================\n",
       "Model Index: 10 - 32 Topics\n",
-      "Coherence Value -5.197418056574151\n",
+      "Coherence Value: -5.197418056574151\n",
       "===========================================\n",
       "Model Index: 11 - 35 Topics\n",
-      "Coherence Value -5.1250828943892275\n",
+      "Coherence Value: -5.1250828943892275\n",
       "===========================================\n",
       "Model Index: 12 - 38 Topics\n",
-      "Coherence Value -5.3405476293844805\n"
+      "Coherence Value: -5.3405476293844805\n"
      ]
     }
    ],
@@ -275,7 +275,7 @@
     "    num = list(coherence_values)[i].get('num_topics')\n",
     "    print(f'''===========================================\n",
     "Model Index: {i} - {num} Topics''')\n",
-    "    print(\"Coherence Value\", cv)"
+    "    print(\"Coherence Value:\", cv)"
    ]
   },
   {
