Re-ran all cells for accurate in/out for code blocks

--- a/module4-topic-modeling/LS_DS_414_Topic_Modeling_Assignment.ipynb
+++ b/module4-topic-modeling/LS_DS_414_Topic_Modeling_Assignment.ipynb
@@ -743,7 +743,7 @@
     "\n",
     "- The 'Amazon' brand contains actual electronics. Especially tablets, probably due to Kindle\n",
     "\n",
-    "- I found 'play game recommend video long' interesting, because you might expect it to be heavier in Amazon due to kindles/tablets and 'play game' however I'm thinking phrases such as 'last a long time' is going to be a lot less common in these product reviews, as you do expect a tablet to last a while, but not always a charger."
+    "- I found 'play game recommend long time' interesting, because you might expect it to be heavier in Amazon due to kindles/tablets and 'play game' however I'm thinking phrases such as 'last a long time' is going to be a lot less common in these product reviews, as you do expect a tablet to last a while, but not always a charger."
    ]
   },
   {
